stacked bar chart: fixed yaxis text cutoff, reordered region bars, removed 'None' practice area

--- a/assets/css/visualizations.scss
+++ b/assets/css/visualizations.scss
@@ -178,7 +178,7 @@ svg.recharts-surface {
   stroke: none;
 }
 .recharts-text.recharts-cartesian-axis-tick-value {
-  font-size: .8em;
+  font-size: .7em;
   font-weight: 600;
 }
 
